log
Wed 12 Apr 2023 07:26:28 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   59 |     mapa->buckets[i]->key = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5410335
Wed 12 Apr 2023 07:33:09 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:64:18: error: ‘*_1 + _3’ may be used uninitialized [-Werror=maybe-uninitialized]
   64 |     mapa->buckets[i]->value = (void*)malloc(sizeof(void));
      |     ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
2d7c4e2
Wed 12 Apr 2023 07:42:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:64:18: error: ‘*_1 + _3’ may be used uninitialized [-Werror=maybe-uninitialized]
   64 |     mapa->buckets[i]->value = (void*)malloc(sizeof(void));
      |     ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
1aa8fd9
Wed 12 Apr 2023 07:42:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
95a2148
Wed 12 Apr 2023 07:43:31 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|6
total_score: 0/70
292ff29
Wed 12 Apr 2023 07:50:04 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: ‘*(Pair **)malloc (8)’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |   mapa->buckets[0]->value = (void*)malloc(sizeof(void));
      |   ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ab6e216
Wed 12 Apr 2023 07:50:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: ‘*(Pair **)malloc (8)’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |   mapa->buckets[0]->value = (void*)malloc(sizeof(void*));
      |   ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
8a94368
Wed 12 Apr 2023 08:01:25 PM UTC: 
 hashmap.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:54: error: ‘*mapa.capacity’ may be used uninitialized [-Werror=maybe-uninitialized]
   59 |   mapa->buckets = (Pair**)malloc(sizeof(Pair*) * mapa->capacity);
      |                                                  ~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2e5634
Wed 12 Apr 2023 08:01:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c232e77
Wed 12 Apr 2023 09:00:28 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   long i = 0;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
bb2ba0e
Thu 13 Apr 2023 03:19:23 AM UTC: 
 hashmap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   long i = 0;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
7e79a0b
Thu 13 Apr 2023 03:19:34 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
06d6aef
Thu 13 Apr 2023 03:23:03 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
35ad73e
Thu 13 Apr 2023 03:23:53 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af3ee75
Thu 13 Apr 2023 03:24:25 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
86e6d71
Thu 13 Apr 2023 03:26:06 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4ac6da0
Thu 13 Apr 2023 03:26:49 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
0e549ce
Thu 13 Apr 2023 03:37:37 AM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
  125 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c0313b4
Thu 13 Apr 2023 03:42:58 AM UTC: 
 hashmap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  0|0
4cdf25a
Thu 13 Apr 2023 03:43:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
567eb02
Thu 13 Apr 2023 03:18:51 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|0
acd4f04
Thu 13 Apr 2023 03:20:06 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
30a5d34
Thu 13 Apr 2023 03:20:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:110:26: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
  110 |   if(strcmp(map->buckets[j]->key,key) == 0){
      |                          ^
      |                          jn
hashmap.c:110:26: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:131:1: error: control reaches end of non-void function [-Werror=return-type]
  131 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b96f2bd
Thu 13 Apr 2023 03:20:34 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0759ea0
Thu 13 Apr 2023 03:25:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5281d05
Thu 13 Apr 2023 03:26:46 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d172e2d
Thu 13 Apr 2023 03:27:46 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e73650c
Thu 13 Apr 2023 03:28:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
2b32358
Thu 13 Apr 2023 03:33:17 PM UTC: 
 hashmap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  11|2
total_score: 50/70
196a27a
Thu 13 Apr 2023 03:42:32 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  12|2
total_score: 50/70
3922ecb
Thu 13 Apr 2023 03:42:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
93caa94
Thu 13 Apr 2023 03:43:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
91b8fa5
Thu 13 Apr 2023 03:43:19 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  11|2
total_score: 50/70
ba624e9
Thu 13 Apr 2023 03:46:39 PM UTC: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:177:23: error: expected ‘;’ before ‘return’
  177 |       map->current = j
      |                       ^
      |                       ;
  178 |       return map->buckets[j];
      |       ~~~~~~           
Compilation failed
8ac4dc5
Thu 13 Apr 2023 03:46:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
8cf632f
Thu 13 Apr 2023 03:48:04 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
762482d
Thu 13 Apr 2023 03:49:08 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:165:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  165 |     if(map->buckets[i] != NULL || map->buckets[i]->key != NULL)
      |     ^~
hashmap.c:167:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  167 |       return map->buckets[i];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
5a357f8
Thu 13 Apr 2023 03:49:24 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
e5e9c08
